--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hi
+<!doctype html>
+<html lang="en" ng-app>
+<head>
+	<meta charset="UTF-8">
+	<title>Asin</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+
+</head>
+<body>
+	<input type="button" value="Hi">
+</body>
+</html>
